--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ html,body,.main {
   background-color: rgba(196, 191, 191, 0.37)
 }
 
-.gear, .gear2
+.gear, .gear2, .gear3
 {
     content: "";
     font-family: "FontAwesome";
@@ -127,20 +127,27 @@ html,body,.main {
     animation: gear 50s infinite linear;
     transform-origin: center;
     z-index: 0;
-    color: #ffffff7a;
+    color: #ffffff50;
 }
 .gear 
 {
-  font-size: 45em;
+  font-size: 40em;
   top: 17%;
   right: 65%;
 }
 
 .gear2 
 {
-  font-size: 30em;
-  top: -25%;
-  right: -5%;
+  font-size: 25em;
+  top: -20%;
+  right: 15%;
+}
+
+.gear3
+{
+  font-size: 15em;
+  top: 65%;
+  right: 5%;
 }
 
 @keyframes carga {
@@ -158,6 +165,15 @@ html,body,.main {
 }
 
 @keyframes gear2 {
+  0% {
+    transform: rotate(0deg);}
+  
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes gear3 {
   0% {
     transform: rotate(0deg);}
   
